@@ -48,7 +48,6 @@ wildcard (Wildcard pre mid post) x = do
 data Pat = Lit String -- ^ foo
          | Star   -- ^ /*/
          | Skip -- ^ //
-         | Skip1 -- ^ //, but must be at least 1 element
          | Stars (Wildcard String) -- ^ *foo*, prefix (fixed), infix floaters, suffix
                           -- e.g. *foo*bar = Stars "" ["foo"] "bar"
             deriving (Show,Eq,Ord)
