@@ -171,10 +171,10 @@ testParser Switch{..} = do
     "x//" # if legacy then [Lit "x", Skip] else [Lit "x", Lit ""]
     "x/**" # [Lit "x", Skip]
     "x//y" # if legacy then [Lit "x",Skip, Lit "y"] else [Lit "x", Lit "y"]
-    "///" # if legacy then [Skip1, Lit ""] else [Lit "", Lit ""]
+    "///" # if legacy then [Star, Skip, Lit ""] else [Lit "", Lit ""]
     "**/**" # [Skip,Skip]
     "**/**/" # [Skip, Skip, Lit ""]
-    "///x" # if legacy then [Skip1, Lit "x"] else [Lit "", Lit "x"]
+    "///x" # if legacy then [Star, Skip, Lit "x"] else [Lit "", Lit "x"]
     "**/x" # [Skip, Lit "x"]
     "x///" # if legacy then [Lit "x", Skip, Lit ""] else [Lit "x", Lit ""]
     "x/**/" # [Lit "x", Skip, Lit ""]
@@ -287,11 +287,11 @@ testMatch Switch{..} = do
     yes "a/**" "a" [""]
     diff "/a//" "/a/" ["/"] []
     yes "/a/**" "/a" [""]
-    old "///a//" "/a" ["/",""]
-    diff "///a//" "/a/" ["/","/"] []
+    old "///a//" "/a" ["","",""]
+    diff "///a//" "/a/" ["","","/"] []
     yes "**/a/**" "/a" ["/",""]
     no "///" ""
-    diff "///" "/" ["/"] []
+    diff "///" "/" ["",""] []
     yes "/**" "/" ["/"]
     yes "**/" "a/" ["a/"]
     diff "////" "/" ["","//"] []
