@@ -1,5 +1,6 @@
 Changelog for filepattern
 
+    Change the extracted result for /// in Legacy patterns
     #2, always ignore . in both FilePattern and FilePath
     #1, make relative FilePatterns match absolute FilePaths
     Rename filePattern to match, delete extract
